# Personal-Finance-and-Expense-Tracker

./: README.md  finance.db  pyproject.toml
app/: cli.py  config.py  main.py
app/models/: __init__.py  user.py
app/repositories/: finance.py
app/routers/: __init__.py  chatbot.py  register.py  reports.py
app/services/: ai_chat.py  auth_service.py
app/static/css/: app.css
app/templates/: 401.html  authenticated-base.html  base.html  dashboard.html  login.html  register.html  reports.html
